some of many changes that I failed to commit properly a week ago
finite.tex
l59: added the requested citations
main.bib
cited two things
mo.tex
l522: used 0 instead of 1 to denote the trivial group for consistency
later on
l627: added complaint

--- a/finite.tex
+++ b/finite.tex
@@ -53,8 +53,10 @@ The following theorem is the usual culmination of an initial investigation into 
 If $f\co R \to S$ is faithfully flat, then there is an equivalence of $R$--modules and $S$--modules equipped with descent data.
 \end{theorem}
 \begin{proof}[Jumping off point]
-The basic observation is that $0 \to R \to S \to S \otimes_R S$ is an exact sequence of $A$--modules.  This makes much of the homological algebra involved work out.
+The basic observation is that $0 \to R \to S \to S \otimes_R S$ is an exact sequence of $A$--modules.  This makes much of the homological algebra involved work out.  
 \end{proof}
+
+For details and additional context, see Section 4.2.1 of \cite{Vistoli}; the story in the context of Hopf algebroids is also spelled out in detail in \cite{Miller}.  \todo{I added the citation requested above, but make a pass over this since I may have put it in an awkward place - AY.}
 
 In our situation, this hypothesis will essentially never be satisfied, so we will pursue a less dramatic statement of the properties of descent.  To see what kind of theorem one might expect, consider the example of $f\co \Z \to \F_p$, which is neither faithful nor flat.  Then, consider the following list of problems (and their partial solutions):
 \begin{itemize}
