--- a/main.bib
+++ b/main.bib
@@ -459,6 +459,13 @@ MRREVIEWER = {J. Dieudonn{\'e}},
 MRREVIEWER = {G. Hirsch},
 }
 
+@ARTICLE{Miller,
+  author = {Miller, Haynes},
+  title = {Sheaves, gradings, and the exact functor theorem},
+  journal = {Unpublished},
+  URL = {http://www-math.mit.edu/~hrm/papers/bcat.pdf}
+}
+
 @article {Morava,
     AUTHOR = {Morava, Jack},
      TITLE = {Noetherian localisations of categories of cobordism comodules},
@@ -657,6 +664,20 @@ MRREVIEWER = {Mark Hovey},
 MRREVIEWER = {W. Stephen Wilson},
        DOI = {10.1090/S0002-9947-99-02436-8},
        URL = {http://dx.doi.org/10.1090/S0002-9947-99-02436-8},
+}
+
+@incollection {Vistoli,
+    AUTHOR = {Vistoli, Angelo},
+     TITLE = {Grothendieck topologies, fibered categories and descent
+              theory},
+ BOOKTITLE = {Fundamental algebraic geometry},
+    SERIES = {Math. Surveys Monogr.},
+    VOLUME = {123},
+     PAGES = {1--104},
+ PUBLISHER = {Amer. Math. Soc., Providence, RI},
+      YEAR = {2005},
+   MRCLASS = {14F20 (14A20)},
+  MRNUMBER = {2223406},
 }
 
 @book {Wilson,
