--- a/mo.tex
+++ b/mo.tex
@@ -519,7 +519,7 @@ Let's contextualize this somewhat.  Given a finite group $G$, we can form a comm
 \end{example}
 
 \begin{example}\label{HF2HomologyIsValuedInAutGaEquivarModules}
-In the previous lecture, we identified $\mathcal A_*$ with the ring of functions on the group scheme $\InternalAut_1(\G_a)$, which is defined by the kernel sequence \[1 \to \InternalAut_1(\G_a) \to \InternalAut(\G_a) \to \Gm \to 1.\]  \todo{Technically, we've only identified $\Spec \mathcal AP_0$, but at least it's plausible that the sub-group scheme in degree 0 (what does this mean??) gives us $\Spec \mathcal A_*$???}  Today's punchline is that this is analogous to the example above: $\Cotor_{\mathcal A_*}(\F_2, H\F_{2*} X)$ is thought of as ``the derived fixed points'' of ``$G = \InternalAut_1(\G_a)$'' on the ``$G$--module'' $H\F_{2*} X$. \todo{Say the word ``strict'' here.} \todo{How do the duals from the above argument play into this?  Do they just cancel out?}
+In the previous lecture, we identified $\mathcal A_*$ with the ring of functions on the group scheme $\InternalAut_1(\G_a)$, which is defined by the kernel sequence \[0 \to \InternalAut_1(\G_a) \to \InternalAut(\G_a) \to \Gm \to 0.\]  \todo{Technically, we've only identified $\Spec \mathcal AP_0$, but at least it's plausible that the sub-group scheme in degree 0 (what does this mean??) gives us $\Spec \mathcal A_*$???}  Today's punchline is that this is analogous to the example above: $\Cotor_{\mathcal A_*}(\F_2, H\F_{2*} X)$ is thought of as ``the derived fixed points'' of ``$G = \InternalAut_1(\G_a)$'' on the ``$G$--module'' $H\F_{2*} X$. \todo{Say the word ``strict'' here.} \todo{How do the duals from the above argument play into this?  Do they just cancel out?}
 \end{example}
 
 \begin{example}
@@ -624,7 +624,7 @@ The method of the previous proof is to exhibit a isomorphism between these schem
 We are now ready to analyze the group cohomology of $\InternalAut(\G_a)$ with coefficients in the comodule $H\F_2P_0(MO)$.
 \begin{theorem}
 The action of $\InternalAut_1(\G_a)$ on $\Coord_1(\G_a)$ is \emph{free}.
-\end{theorem}
+\end{theorem}\todo{So it seems like what you end up using about this theorem for the purposes of the calculation at hand is not just that the action is free, but you have such a nice identification of the quotient.  Maybe it would be clearer to include this as part of the statement?}
 \begin{proof}
 Recall that $\InternalAut_1(\G_a)$ is defined by the (split) kernel sequence \[0 \to \InternalAut_1(\G_a) \to \InternalAut(\G_a) \to \Gm \to 0.\]  Consider a point $f \in \Coord_1(\G_a)(R)$, which in terms of the standard coordinate can be expressed as \[f(x) = \sum_{j=1}^\infty b_{j-1} x^j,\] \todo{Why is this?  I think I have a somewhat incorrect idea of what $\Coord$ is.  In addition to being a set map that sends the set of nilpotent elements in $R$ to itself, what other conditions does $f$ have to satisfy?} where $b_0 = 1$.  Decompose this series as $f(x) = f_2(x) + f_r(x)$, with
 \begin{align*}
