--- a/finite.tex
+++ b/finite.tex
@@ -209,11 +209,11 @@ Our first goal for today is to outline a program for the rest of this Case Study
 With this in mind, given a map $f$ in the diagram\todo{The bottom of COCTALOS page 68 has a better interpretation of what picking a formal group law has to do with anything, I think.}
 \begin{center}
 \begin{tikzcd}
-\Spec R \arrow{r}{f} & \moduli{fgl} \arrow[-,double]{r} \arrow{d} & \context{MU}[0] \arrow{d} \arrow[-,double]{r} & \Spec MUP_0 \\
-& \moduli{fg} \arrow[-,double]{r} \arrow[leftarrow]{lu} & \context{MU},
+\Spec R \arrow{r}{f} & \moduli{fgl} \arrow[-,double]{r} \arrow{d} & \context{MUP}[0] \arrow{d} \arrow[-,double]{r} & \Spec MUP_0 \\
+& \moduli{fg} \arrow[-,double]{r} \arrow[leftarrow]{lu} & \context{MUP},
 \end{tikzcd}
-\end{center}
-life would be easiest if the $R$--module determined by $f^* \context{MUP}(X)$ were itself the value of a homology theory $R_0(X) = MUP_0 X \otimes_{MUP_0} R$.  After all, the pullback of some arbitrary sheaf along some arbitrary map has no special behavior, but homology functors do have familiar special behaviors which we could hope to exploit.  Generally, this is unreasonable to expect: homology theories are functors which convert cofiber sequences of spectra to long exact sequences of groups, but base--change from $\moduli{fg}$ to $\Spec R$ preserves exact sequences exactly when $f$ is \textit{flat}.  In that case, this gives the following theorem:
+\end{center}\todo{please check the P's, 0's, and labels of arrows? I tried to fudge around with it since it looked funny but I want to make sure I didn't mess anything up, AY.}
+life would be easiest if the $R$--module determined by $f^* \context{MUP}(X)$ were itself the value of a homology theory $R_0(X) = MUP_0 X \otimes_{MUP_0} R$\todo{should this (and the one later) be $R(X)$ and not $R_0$? For example when $R=MUP_0$}.  After all, the pullback of some arbitrary sheaf along some arbitrary map has no special behavior, but homology functors do have familiar special behaviors which we could hope to exploit.  Generally, this is unreasonable to expect: homology theories are functors which convert cofiber sequences of spectra to long exact sequences of groups, but base--change from $\moduli{fg}$ to $\Spec R$ preserves exact sequences exactly when the diagonal arrow is \textit{flat}.  In that case, this gives the following theorem:
 
 \begin{theorem}[Landweber]\label{LandwebersStackyTheorem}
 Given such a diagram where the diagonal arrow is flat, the functor \[R_0(X) := MUP_0(X) \otimes_{MUP_0} R\] is a homology theory. 
