modifications to this week’s Lectures 3.6-3.8

--- a/main.bib
+++ b/main.bib
@@ -372,6 +372,21 @@ MRREVIEWER = {Andrew J. Baker},
 MRREVIEWER = {Joseph H. Silverman},
 }
 
+@article {JohnsonWilson,
+    AUTHOR = {Johnson, David Copeland and Wilson, W. Stephen},
+     TITLE = {{$BP$} operations and {M}orava's extraordinary {$K$}-theories},
+   JOURNAL = {Math. Z.},
+  FJOURNAL = {Mathematische Zeitschrift},
+    VOLUME = {144},
+      YEAR = {1975},
+    NUMBER = {1},
+     PAGES = {55--75},
+      ISSN = {0025-5874},
+   MRCLASS = {55B20},
+  MRNUMBER = {0377856},
+MRREVIEWER = {R. E. Stong},
+}
+
 @article {KLW,
     AUTHOR = {Kitchloo, Nitu and Laures, Gerd and Wilson, W. Stephen},
      TITLE = {The {M}orava {$K$}-theory of spaces related to {$BO$}},
