work on the beginning of Lecture 5.1

--- a/quillen.tex
+++ b/quillen.tex
@@ -389,7 +389,7 @@ The next major theorems concerning projectivization are the following:
 The sub-bundle of $\pi^*(\xi)$ consisting of vectors $(v, (\ell, x))$ such that $v$ lies along the line $\ell$ splits off a canonical line bundle. \qed
 \end{corollary}
 
-\begin{corollary}[``Splitting principle'' / ``Complex--oriented descent'']
+\begin{corollary}[``Splitting principle'' / ``Complex--oriented descent'']\label{OriginalSplittingPrinciple}
 Associated to any $n$--dimensional complex vector bundle $\xi$ over a base $X$, there is a canonical map $i_\xi\co Y_\xi \to X$ such that $(i_\xi)_E\co (Y_\xi)_E \to X_E$ is finite and faithfully flat, and there is a canonical splitting into complex line bundles: \[i_\xi^*(\xi) \cong \bigoplus_{i=1}^n \L_i. \qed\]
 \end{corollary}
 
